@startuml Observer Pattern class diagram
title Observer Pattern sequence diagram
interface IObservable {
    List<IObserver> observers

    add(IObserver)
    remove(IObservable)
    notifyObservers()
}

interface IObserver {
    update()
}

class ConcreteObservable {
    add(IObserver)
    remove(IObservable)
    notifyObservers()

    getState()
}

class ConcreteObserver {
    ConcreteObservable concreteObservable
    
    update()
}

IObservable -> "0..n" IObserver
IObservable <|-- ConcreteObservable
IObserver <|-- ConcreteObserver
ConcreteObservable <- ConcreteObserver
@enduml